# readiq-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_agent.py  run_api.py
.github/workflows/: deploy.yml
app/: chat_models.py  config.py  db.py  llm.py  server.py
app/pipeline/: chat.py  embed.py  embed_client.py  ingest.py  ingest_epub.py  research.py  retrieval.py  runner.py  search.py  summarize.py
