[project]
name = "booksummary-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "asyncpg>=0.29",
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "fastapi>=0.139.0",
    "google-genai>=1.0",
    "openai>=1.40",
    "pgvector>=0.2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pypdf>=4.0",
    "redis>=5.0",
    "tavily-python>=0.3.0",
    "uvicorn[standard]>=0.49.0",
]
